# kilkea

./: .gitattributes  Cargo.toml  README.md  TODO.md  book.toml  build.rs
src/: SUMMARY.md  chapter_1.md  cli.rs  global.rs  main.rs
src/backend/: compiler.rs  mod.rs  types.rs
src/backend/ir/: entities.rs  inst.rs  mod.rs
src/backend/ir/codegen/: context.rs  mod.rs
src/backend/ir/codegen/builders/: blockbuilder.rs  builder.rs  functionbuilder.rs  instbuilder.rs  mod.rs
src/backend/ir/optimization/: constantfolder.rs  mod.rs
src/backend/ir_tests/: mod.rs
src/backend/kilkwell/: context.rs  mod.rs  module.rs  test.txt
src/frontend/: lexer.rs  mod.rs  parser.rs  plugins.rs  typechecker.rs  typeregistry.rs
tests/: comments.kl  control_flow.kese  control_flow.kl  main.kl  mutation.kese  mutation.kl  not_unary.kese  undefined_variable.kese  undefined_variable.kl  undetermined.kese
