[package]
name = "kilkea"
version = "0.1.0"
edition = "2024"
authors = ["tayenx3 kontajiousgd00@gmail.com"]
license = "Apache 2.0"
description = "Kilkea - A statically-typed compiled programming language made for fearless concurrency and data flow. Kilkea delivers a strong type system as well as a flexible and robust syntax for ergonomic and decompressed development."

[dependencies]
clap = { "version" = "4.5.48", "features" = ["derive"] }
colored = "3.0.0"
llvm-sys = { "version" = "160", "features" = ["no-llvm-linking"] }
once_cell = "1.21.3"
