[package]
name = "kilkea"
version = "0.1.0"
edition = "2024"
authors = ["tayenx3 kontajiousgd00@gmail.com"]
license = "Apache 2.0"
description = "Kilkea - A statically-typed compiled programming language made for fearless concurrency and data flow. Kilkea delivers a strong type system as well as a flexible and robust syntax for ergonomic and decompressed development."

[dependencies]
# Miscellaneous
clap = { "version" = "4.5.48", "features" = ["derive"] }
colored = "3.0.0"
once_cell = "1.21.3"
strsim = "0.10"

# Cranelift Codegen
cranelift = "0.110"
cranelift-frontend = "0.110"
cranelift-native = "0.110"
cranelift-object = "0.110"
cranelift-module = "0.110"
target-lexicon = "0.12"
